# flashcard

./: .env.example  .gitignore  README.md  pyproject.toml
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: answer.baml  clients.baml  compare.baml
flashcard/: __init__.py  cag.py  chunking.py  cli.py  corpus.py  cost_guard.py  embed.py  game.py  index.py  metrics.py  pricing.py  questions.py  rag.py  resilience.py  runner.py  tokens.py  tui.py  tui_render.py  tui_state.py
flashcard/data/: corpus.txt
tests/: test_baml_client.py  test_baml_sources.py  test_cag.py  test_chunking.py  test_compare_baml.py  test_consolidation.py  test_embed.py  test_env.py  test_env_config.py  test_index.py  test_issue_19_cli_wiring.py  test_issue_20_verdict_mapper.py  test_issue_21_resilient_session_wiring.py  test_issue_22_game.py  test_issue_23_readme_sync.py  test_issue_2_corpus_loader.py  test_issue_2_pipeline_config.py  test_judge_gating.py  test_metrics.py  test_questions.py  test_r18_footer_side_label.py  test_r4_cost_guard.py  test_r5_encoding_alignment.py  test_rag.py  test_runner.py  test_tui.py  test_tui_render.py  test_tui_state.py
