[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashcard"
version = "0.1.0"
description = "RAG vs CAG side-by-side demo CLI for Anthropic"
requires-python = ">=3.11"
dependencies = [
    "baml-py>=0.87",
    "typer>=0.12",
    "rich>=13",
    "anthropic>=0.40",
    "voyageai>=0.3",
    "numpy>=1.26",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "hypothesis>=6",
    "tiktoken>=0.7",
]

[project.scripts]
flashcard = "flashcard.cli:app"

[tool.setuptools.packages.find]
include = ["flashcard*"]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pyright]
venvPath = "."
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: live tests that hit the real Anthropic API (require ANTHROPIC_API_KEY)",
]
