[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashcard"
version = "0.1.0"
description = "RAG vs CAG side-by-side demo CLI for OpenAI"
requires-python = ">=3.11"
dependencies = [
    "baml-py==0.222.0",  # must match baml_src/generators.baml — the generated baml_client rejects a version mismatch
    "typer>=0.12",
    "rich>=13",
    "openai>=1.0",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "hypothesis>=6",
]

[project.scripts]
flashcard = "flashcard.cli:app"

[tool.setuptools.packages.find]
include = ["baml_client*", "flashcard*"]

[tool.setuptools.package-data]
flashcard = ["data/*.txt", "data/*.json"]

[tool.ruff]
exclude = ["baml_client/"]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
# Descriptive BDD test names (test_when_..._then_...) and assert messages
# routinely exceed the line limit; readability beats wrapping in test code.
"tests/*" = ["E501"]

[tool.pyright]
exclude = ["baml_client/", ".venv", "tests/"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: live tests that hit the real OpenAI API (require OPENAI_API_KEY)",
]
